Ajout du système routage JS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Le Quai Antique</title>
   </head>
   <body>
-    <h1>Le Quai Antique</h1>
+    <header>Le header de mon site</header>
+
+    <main id="main-page">
+      <!-- Le contenu de la page sera injecté ici -->
+    </main>
+
+    <footer>Le footer de mon site</footer>
+    <script type="module" src="./router/router.js"></script>
   </body>
 </html>
