--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="./node_modules/boostrap/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./node_modules/bootstrap-icons/font/bootstrap-icons.css"
+    />
     <title>Le Quai Antique</title>
   </head>
   <body>
@@ -14,5 +22,6 @@
 
     <footer>Le footer de mon site</footer>
     <script type="module" src="./router/router.js"></script>
+    <script src="./node_modules/boostrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
