--- a/pages/home.html
+++ b/pages/home.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Bienvenue sur le site du Restaurant Le Quai Antique</h1>
+    <button class="btn btn-primary">Coucou</button>
   </body>
 </html>
