Mise à jour Bootstrap

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
       href="./node_modules/bootstrap-icons/font/bootstrap-icons.css"
     />
+    <link rel="stylesheet" href="./scss/main.css" />
     <title>Le Quai Antique</title>
   </head>
   <body>
