--- a/index.html
+++ b/index.html
@@ -71,7 +71,25 @@
       <!-- Le contenu de la page sera injecté ici -->
     </main>
 
-    <footer>Le footer de mon site</footer>
+    <footer class="bg-dark text-white text-center footer">
+      <div class="row">
+        <div class="col-12 col-lg-4">
+          <h3 class="text-primary">Nos horaires</h3>
+          <p>Du mardi au dimanche 12:00-14:00 18:00-23:00</p>
+        </div>
+        <div class="col-6 col-lg-4">
+          <p>
+            Le Quai Antique <br /><br />
+            5 Rue de la Ruelle <br />
+            74567 Chambéry <br />
+            +33 4 56 78 90 12
+          </p>
+        </div>
+        <div class="col-6 col-lg-4">
+          <p>contact@quaiantique.com</p>
+        </div>
+      </div>
+    </footer>
     <script type="module" src="./router/router.js"></script>
     <script src="./node_modules/boostrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
