Ajout section hero.qa

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bienvenue</title>
-  </head>
-  <body>
-    <h1>Bienvenue sur le site du Restaurant Le Quai Antique</h1>
-    <button class="btn btn-primary">Coucou</button>
-  </body>
-</html>
+<div class="hero-qa text-center text-white">
+  <div class="hero-qa-content">
+    <p>Le Chef Arnaut Michant vous invite au</p>
+    <h1>Quai Antique</h1>
+    <button class="btn btn-primary">Réserver</button>
+  </div>
+</div>
