--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </p>
         </div>
         <div class="col-6 col-lg-4">
-          <p>contact@quaiantique.com</p>
+          <p>contact</p>
         </div>
       </div>
     </footer>
