--- a/pages/home.html
+++ b/pages/home.html
@@ -5,3 +5,75 @@
     <button class="btn btn-primary">Réserver</button>
   </div>
 </div>
+<section>
+  <article>
+    <div class="container p-4">
+      <h2 class="text-center text-primary">Bienvenue au Quai Antique</h2>
+      <div class="row row-cols-2 align-items-justify">
+        <div class="col">
+          <p class="text-justify">
+            Bienvenue sur le site de notre restaurant gastronomique, situé au
+            cœur de la magnifique ville de Chambéry. Le Chef Arnaut Michant vous
+            invite à découvrir un voyage culinaire mémorable.
+          </p>
+        </div>
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="../img/chef.jpeg"
+            alt="Le Chef Arnaut Michant"
+          />
+        </div>
+      </div>
+      <div class="text-center pt-4">
+        <a href="#" class="btn btn-primary">Nos Menus</a>
+      </div>
+    </div>
+  </article>
+  <article class="bg-black text-white">
+    <div class="container p-4">
+      <h2 class="text-center text-primary">Des produits frais</h2>
+      <div class="row row-cols-2 align-items-justify">
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="../img/produits-frais.jpg"
+            alt="Des produits frais"
+          />
+        </div>
+        <div class="col">
+          <p class="text-justify">
+            Découvrez la richesse des saveurs avec nos plats élaborés à partir
+            de produits frais et de saison, cueillis localement.
+          </p>
+        </div>
+      </div>
+      <div class="text-center pt-4">
+        <a href="#" class="btn btn-primary">Voir la Galerie</a>
+      </div>
+    </div>
+  </article>
+  <article>
+    <div class="container p-4">
+      <h2 class="text-center text-primary">Réservervation en ligne</h2>
+      <div class="row row-cols-2 align-items-justify">
+        <div class="col">
+          <p class="text-justify">
+            Réservez votre table sur ce site : vous n’êtes qu’à un clic d’une
+            expérience culinaire magique !
+          </p>
+        </div>
+        <div class="col">
+          <img
+            class="w-100 rounded"
+            src="../img/reserved.jpg"
+            alt="Réservez en ligne ('#book')"
+          />
+        </div>
+      </div>
+      <div class="text-center pt-4">
+        <a href="#" class="btn btn-primary">Réserver</a>
+      </div>
+    </div>
+  </article>
+</section>
