--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="/">Accueil</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Galerie</a>
+                <a class="nav-link" href="/Galerie">Galerie</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">La Carte</a>
@@ -66,11 +66,9 @@
         </div>
       </nav>
     </header>
-
     <main id="main-page">
       <!-- Le contenu de la page sera injecté ici -->
     </main>
-
     <footer class="bg-dark text-white text-center footer">
       <div class="row">
         <div class="col-12 col-lg-4">
