--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -1,9 +1,23 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Galerie</title>
-  </head>
-  <body></body>
-</html>
+<div class="hero-qa text-center text-white">
+  <div class="hero-qa-content">
+    <h1>Galerie</h1>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row row-cols-2 row-cols-lg-3">
+    <div class="col">
+      <div class="image-card texte-white">
+        <img src="../img/burger.jpg" class="rounded w-100" />
+        <p class="titre-image">Titre</p>
+      </div>
+    </div>
+
+    <div class="col p-3">
+      <div class="image-card text-white">
+        <img src="../img/burger.jpg" class="rounded w-100" />
+        <p class="titre-image">Titre</p>
+      </div>
+    </div>
+  </div>
+</div>
