--- a/pages/home.html
+++ b/pages/home.html
@@ -12,9 +12,8 @@
       <div class="row row-cols-2 align-items-justify">
         <div class="col">
           <p class="text-justify">
-            Bienvenue sur le site de notre restaurant gastronomique, situé au
-            cœur de la magnifique ville de Chambéry. Le Chef Arnaut Michant vous
-            invite à découvrir un voyage culinaire mémorable.
+            Au cœur de la magnifique ville de Chambéry, le Chef Arnaut Michant
+            vous invite à découvrir un voyage culinaire mémorable.
           </p>
         </div>
         <div class="col">
@@ -35,6 +34,7 @@
       <h2 class="text-center text-primary">Des produits frais</h2>
       <div class="row row-cols-2 align-items-justify">
         <div class="col">
+          <br />
           <img
             class="w-100 rounded"
             src="../img/produits-frais.jpg"
@@ -42,6 +42,7 @@
           />
         </div>
         <div class="col">
+          <br />
           <p class="text-justify">
             Découvrez la richesse des saveurs avec nos plats élaborés à partir
             de produits frais et de saison, cueillis localement.
@@ -49,7 +50,7 @@
         </div>
       </div>
       <div class="text-center pt-4">
-        <a href="#" class="btn btn-primary">Voir la Galerie</a>
+        <a href="/galerie" class="btn btn-primary">Voir la Galerie</a>
       </div>
     </div>
   </article>
