--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="./node_modules/boostrap/dist/css/bootstrap.min.css"
+      href="/node_modules/boostrap/dist/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="./node_modules/bootstrap-icons/font/bootstrap-icons.css"
+      href="/node_modules/bootstrap-icons/font/bootstrap-icons.css"
     />
-    <link rel="stylesheet" href="./scss/main.css" />
+    <link rel="stylesheet" href="/scss/main.css" />
     <title>Le Quai Antique</title>
   </head>
   <body>
@@ -25,7 +25,7 @@
             data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent"
-            aria-expanded="false"
+            aria-expanded="true"
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,7 @@
                 <a class="nav-link" href="/Galerie">Galerie</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">La Carte</a>
+                <a class="nav-link" href="/Menus">La Carte</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Réservations</a>
@@ -51,17 +51,6 @@
                 <a class="nav-link" href="#">Connexion/Déconnexion</a>
               </li>
             </ul>
-            <!-- <form class="d-flex" role="search">
-              <input
-                class="form-control me-2"
-                type="search"
-                placeholder="Search"
-                aria-label="Search"
-              />
-              <button class="btn btn-outline-success" type="submit">
-                Search
-              </button>
-            </form> -->
           </div>
         </div>
       </nav>
@@ -88,7 +77,11 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="./router/router.js"></script>
-    <script src="./node_modules/boostrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="../Router/router.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
