--- a/pages/menus.html
+++ b/pages/menus.html
@@ -1,6 +1,6 @@
 <div class="hero-qa text-center text-white">
   <div class="hero-qa-content">
-    <h1>Galerie</h1>
+    <h1>Nos Menus</h1>
   </div>
 </div>
 
