Ajout des liens nav

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                 <a class="nav-link" href="/Menus">La Carte</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Réservations</a>
+                <a class="nav-link" href="/Reservation">Réservations</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Mon Compte</a>
+                <a class="nav-link" href="/Compte">Mon Compte</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Connexion/Déconnexion</a>
