--- a/pages/home.html
+++ b/pages/home.html
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="text-center pt-4">
-        <a href="#" class="btn btn-primary">Nos Menus</a>
+        <a href="/Menus" class="btn btn-primary">Nos Menus</a>
       </div>
     </div>
   </article>
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="text-center pt-4">
-        <a href="#" class="btn btn-primary">Réserver</a>
+        <a href="/Reservation" class="btn btn-primary">Réserver</a>
       </div>
     </div>
   </article>
