--- a/pages/compte.html
+++ b/pages/compte.html
@@ -1,7 +1,7 @@
 <div class="hero-qa text-center text-white">
   <div class="hero-qa-content">
-    <h1>Nos Menus</h1>
+    <h1>Mon Compte</h1>
   </div>
 </div>
 
-<div class="container p-4">La Carte ici</div>
+<div class="container p-4">Mon Compte</div>
