--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container p-4">
   <div class="row row-cols-2 row-cols-lg-3">
     <div class="col p-3">
       <div class="image-card texte-white">
