--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
   <div class="hero-qa-content">
     <p>Le Chef Arnaut Michant vous invite au</p>
     <h1>Quai Antique</h1>
-    <button class="btn btn-primary">Réserver</button>
+    <a href="/Reservation"><button class="btn btn-primary">Réserver</button></a>
   </div>
 </div>
 <section>
