--- a/pages/reservation.html
+++ b/pages/reservation.html
@@ -4,4 +4,48 @@
   </div>
 </div>
 
-<div class="container p-4">Réservations</div>
+<div class="container p-4">
+  <form>
+    <div class="mb-3">
+      <label for="DateInput" class="form-label">Date</label>
+      <input
+        type="date"
+        class="form-control"
+        id="DateInput"
+        placeholder="Choisissez la date"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="HeureInput" class="form-label">Heure</label>
+      <input
+        type="hour"
+        class="form-control"
+        id="HeureInput"
+        placeholder="Choisissez l'heure"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="NbConvivesInput" class="form-label"
+        >Nombre de personnes</label
+      >
+      <input
+        type="text"
+        class="form-control"
+        id="NbConvivesInput"
+        placeholder="Nombre de personnes"
+      />
+    </div>
+    <div class="mb-3">
+      <label for="AllergiesInput" class="form-label">Allergies</label>
+      <input
+        type="text"
+        class="form-control"
+        id="AllergiesInput"
+        placeholder="Renseignez vos allergies ici"
+      />
+    </div>
+    <div class="text-center">
+      <button type="submit" class="btn btn-primary">Réserver</button>
+    </div>
+  </form>
+</div>
