--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -5,11 +5,23 @@
 </div>
 
 <div class="container p-4">
+  <div class="text-center">
+    <button class="btn btn-primary">Ajouter une photo</button>
+  </div>
+  <br />
   <div class="row row-cols-2 row-cols-lg-3">
     <div class="col p-3">
       <div class="image-card texte-white">
         <img src="../img/burger.jpg" class="rounded w-100" />
         <p class="titre-image">Titre</p>
+        <div class="action-image-buttons">
+          <button type="button" class="btn btn-outline-light">
+            <i class="bi bi-pencil-square"></i>
+          </button>
+          <button type="button" class="btn btn-outline-light">
+            <i class="bi bi-trash"></i>
+          </button>
+        </div>
       </div>
     </div>
     <div class="col p-3">
@@ -42,5 +54,9 @@
         <p class="titre-image">Titre</p>
       </div>
     </div>
+  </div>
+  <br />
+  <div class="text-center">
+    <a href="#" class="btn btn-primary">Réserver</a>
   </div>
 </div>
