--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -6,7 +6,14 @@
 
 <div class="container p-4">
   <div class="text-center">
-    <button class="btn btn-primary">Ajouter une photo</button>
+    <button
+      type="button"
+      class="btn btn-primary"
+      data-bs-toggle="modal"
+      data-bs-target="#EditionPhotoModal"
+    >
+      Ajouter une photo
+    </button>
   </div>
   <br />
   <div class="row row-cols-2 row-cols-lg-3">
@@ -15,10 +22,20 @@
         <img src="../img/burger.jpg" class="rounded w-100" />
         <p class="titre-image">Titre</p>
         <div class="action-image-buttons">
-          <button type="button" class="btn btn-outline-light">
+          <button
+            type="button"
+            class="btn btn-outline-light"
+            data-bs-toggle="modal"
+            data-bs-target="#EditionPhotoModal"
+          >
             <i class="bi bi-pencil-square"></i>
           </button>
-          <button type="button" class="btn btn-outline-light">
+          <button
+            type="button"
+            class="btn btn-outline-light"
+            data-bs-toggle="modal"
+            data-bs-target="#DeletePhotoModal"
+          >
             <i class="bi bi-trash"></i>
           </button>
         </div>
@@ -58,5 +75,116 @@
   <br />
   <div class="text-center">
     <a href="#" class="btn btn-primary">Réserver</a>
+  </div>
+</div>
+
+<!-- Modal Edition -->
+<div
+  class="modal fade"
+  id="EditionPhotoModal"
+  tabindex="-1"
+  aria-labelledby="EditionPhotoModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title fs-5" id="EditionPhotoModalLabel">
+          Edition Photo
+        </h2>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="NamePhotoInput" class="form-label">Titre</label>
+            <input
+              type="text"
+              class="form-control"
+              id="NamePhotoInput"
+              placeholder="ex. : Lasagnes à la Bolognaise"
+            />
+          </div>
+          <div class="mb-3">
+            <label for="ImageInput" class="form-label">Image</label>
+            <input
+              type="file"
+              class="form-control"
+              id="ImageInput"
+              placeholder="Parcourir"
+            />
+          </div>
+          <div class="text-center">
+            <button type="button" class="btn btn-primary">
+              Ajouter la photo
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Annuler
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Suppression -->
+<div
+  class="modal fade"
+  id="DeletePhotoModal"
+  tabindex="-1"
+  aria-labelledby="DeletePhotoModal"
+  aria-hidden="true"
+>
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title fs-5" id="DeletePhotoModal">
+          Êtes-vous sûr de vouloir supprimer cette photo ?
+        </h2>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <p>Titre</p>
+            <img src="../img/burger.jpg" alt="Burger" class="rounded w-100" />
+          </div>
+          <div class="text-center">
+            <button type="button" class="btn btn-danger">Supprimer</button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Annuler
+            </button>
+          </div>
+        </form>
+      </div>
+      <!-- <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Fermer
+        </button>
+        <button type="button" class="btn btn-primary">
+          Sauvegarder les changements
+        </button>
+      </div>
+    </div> -->
+    </div>
   </div>
 </div>
