--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="/node_modules/boostrap/dist/css/bootstrap.min.css"
+      href="./node_modules/boostrap/dist/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="/node_modules/bootstrap-icons/font/bootstrap-icons.css"
+      href="./node_modules/bootstrap-icons/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="/scss/main.css" />
     <title>Le Quai Antique</title>
@@ -42,7 +42,7 @@
                 <a class="nav-link" href="/Menus">La Carte</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/Reservation">Réservations</a>
+                <a class="nav-link" href="/AllResa">Réservations</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/Compte">Mon Compte</a>
