--- a/pages/auth/sign-up.html
+++ b/pages/auth/sign-up.html
@@ -7,11 +7,11 @@
 <div class="container p-4">
   <form>
     <div class="mb-3">
-      <label for="NomInupt" class="form-label">Nom</label>
+      <label for="NomInput" class="form-label">Nom</label>
       <input
         type="text"
         class="form-control"
-        id="NomInupt"
+        id="NomInput"
         placeholder="Votre NOM"
       />
     </div>
@@ -41,6 +41,11 @@
         id="PasswordInput"
         placeholder="************"
       />
+      <div class="invalid-feedback">
+        Votre mot de passe n'est pas assez robuste : il doit contenir au moins 8
+        caractères, comprenant au moins une lettre majuscule, une lettre
+        minuscule, un chiffre et un caractère spécial.
+      </div>
     </div>
     <div class="mb-3">
       <label for="PaswordConfirmInput" class="form-label"
@@ -54,7 +59,13 @@
       />
     </div>
     <div class="text-center">
-      <button type="submit" class="btn btn-primary">Inscription</button>
+      <button
+        type="submit"
+        class="btn btn-primary"
+        id="btn-validation-inscription"
+      >
+        Inscription
+      </button>
     </div>
   </form>
   <div class="text-center pt-3">
