Vérification Formulaire en JS

--- a/pages/auth/signin.html
+++ b/pages/auth/signin.html
@@ -30,6 +30,6 @@
   </form>
   <div class="text-center pt-3">
     Vous n'avez pas encore de compte ?
-    <a href="/Sign-Up">Inscrivez-vous ici !</a>
+    <a href="/SignUp">Inscrivez-vous ici !</a>
   </div>
 </div>
