--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a class="nav-link" href="/Compte">Mon Compte</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/Sign-In">Connexion</a>
+                <a class="nav-link" href="/SignIn">Connexion</a>
               </li>
             </ul>
           </div>
