Corrections bug routes JS

--- a/pages/reservations/all-resa.html
+++ b/pages/reservations/all-resa.html
@@ -6,23 +6,18 @@
 <div class="container text-center p-4">
   <a href="/Reserver" class="btn btn-primary">Réserver</a>
 </div>
-<div class="container bt-4 allreservations">
-  <div class="text-center">
+<div class="container bt-4 p-4 allreservations" style="height: fit-content">
+  <div class="text-center" style="padding-bottom: 150px">
     <a href="#">
-      <span>17/07/2024</span> | 
-      <span>12:30</span> | 
-      <span>4 personnes</span> | 
-      <span>Arachides</span> 
+      <span>17/07/2024</span> | <span>12:30</span> | <span>4 personnes</span> |
+      <span>Arachides</span>
+    </a>
     <a href="#">
-      <span>29/08/2024</span> | 
-      <span>13:30</span> | 
-      <span>6 personnes</span> | 
+      <span>29/08/2024</span> | <span>13:30</span> | <span>6 personnes</span> |
       <span>Pas d'allergie</span>
     </a>
     <a href="#">
-      <span>13/09/2024</span> | 
-      <span>12:15</span> | 
-      <span>3 personnes</span> | 
+      <span>13/09/2024</span> | <span>12:15</span> | <span>3 personnes</span> |
       <span>Pas d'allergie</span>
     </a>
   </div>
