--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="./node_modules/boostrap/dist/css/bootstrap.min.css"
+      href="/node_modules/boostrap/dist/css/bootstrap.min.css"
     />
     <link
       rel="stylesheet"
-      href="./node_modules/bootstrap-icons/font/bootstrap-icons.css"
+      href="/node_modules/bootstrap-icons/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="/scss/main.css" />
+    <link rel="icon" href="/img/favicon/favicon.ico" />
     <title>Le Quai Antique</title>
   </head>
   <body>
@@ -47,15 +48,18 @@
               <li class="nav-item">
                 <a class="nav-link" href="/Compte">Mon Compte</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item" data-show="disconnected">
                 <a class="nav-link" href="/SignIn">Connexion</a>
+              </li>
+              <li class="nav-item" data-show="connected">
+                <button class="nav-link" id="signout-btn">Déconnexion</button>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    <main id="main-page">
+    <main id="main-page" style="margin-bottom: 5%">
       <!-- Le contenu de la page sera injecté ici -->
     </main>
     <footer class="bg-dark text-white text-center footer">
@@ -77,7 +81,8 @@
         </div>
       </div>
     </footer>
-    <script type="module" src="../Router/router.js"></script>
+    <script type="module" src="/Router/router.js"></script>
+    <script src="/js/script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
