--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -21,7 +21,7 @@
       <div class="image-card texte-white">
         <img src="../img/burger.jpg" class="rounded w-100" />
         <p class="titre-image">Titre</p>
-        <div class="action-image-buttons">
+        <div class="action-image-buttons" data-show="admin">
           <button
             type="button"
             class="btn btn-outline-light"
@@ -74,7 +74,7 @@
   </div>
   <br />
   <div class="text-center">
-    <a href="#" class="btn btn-primary">Réserver</a>
+    <a href="/Reserver" class="btn btn-primary">Réserver</a>
   </div>
 </div>
 
