--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
   <div class="hero-qa-content">
     <p>Le Chef Arnaut Michant vous invite au</p>
     <h1>Quai Antique</h1>
-    <a href="/Reservation"><button class="btn btn-primary">Réserver</button></a>
+    <a href="/Reserver"><button class="btn btn-primary">Réserver</button></a>
   </div>
 </div>
 <section>
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="text-center pt-4">
-        <a href="/Reservation" class="btn btn-primary">Réserver</a>
+        <a href="/Reserver" class="btn btn-primary">Réserver</a>
       </div>
     </div>
   </article>
