--- a/pages/home.html
+++ b/pages/home.html
@@ -1,10 +1,60 @@
-<div class="hero-qa text-center text-white">
+<!-- <div class="hero-qa text-center text-white">
   <div class="hero-qa-content">
     <p>Le Chef Arnaut Michant vous invite au</p>
     <h1>Quai Antique</h1>
     <a href="/Reserver"><button class="btn btn-primary">Réserver</button></a>
   </div>
+</div> -->
+
+<div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../img/hero-qa.jpg" class="d-block w-100" alt="..." />
+    </div>
+    <div class="carousel-caption">
+      <p>Le Chef Arnaut Michant vous invite au</p>
+      <h1>Quai Antique</h1>
+      <a href="/Reserver"><button class="btn btn-primary">Réserver</button></a>
+    </div>
+    <div class="carousel-item">
+      <img src="../img/burger.jpg" class="d-block w-100" alt="..." />
+    </div>
+    <div class="carousel-item">
+      <img src="../img/table.jpg" class="d-block w-100" alt="..." />
+    </div>
+    <div class="carousel-item">
+      <img src="../img/dessert.jpg" class="d-block w-100" alt="..." />
+    </div>
+    <div class="carousel-item">
+      <img src="../img/plat.jpg" class="d-block w-100" alt="..." />
+    </div>
+    <div class="carousel-item">
+      <img src="../img/produits-frais.jpg" class="d-block w-100" alt="..." />
+    </div>
+    <div class="carousel-item">
+      <img src="../img/wine.jpg" class="d-block w-100" alt="..." />
+    </div>
+  </div>
+  <button
+    class="carousel-control-prev"
+    type="button"
+    data-bs-target="#carouselExample"
+    data-bs-slide="prev"
+  >
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button
+    class="carousel-control-next"
+    type="button"
+    data-bs-target="#carouselExample"
+    data-bs-slide="next"
+  >
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
+
 <section>
   <article>
     <div class="container p-4">
