--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -11,6 +11,7 @@
       class="btn btn-primary"
       data-bs-toggle="modal"
       data-bs-target="#EditionPhotoModal"
+      data-show="admin"
     >
       Ajouter une photo
     </button>
